# esp32c3-open-mac

./: CMakeLists.txt  sdkconfig  sdkconfig.defaults
components/80211_mac_rust/: 80211_mac_interface.c  CMakeLists.txt
components/80211_mac_rust/include/: 80211_mac_interface.h
components/80211_mac_rust/rust_crate/: Cargo.toml  build.rs  rust-toolchain.toml
components/80211_mac_rust/rust_crate/.cargo/: config.toml
components/open_wifi_driver/: CMakeLists.txt
components/open_wifi_driver/include/: data_types.h  hardware.h  mac.h  proprietary.h
components/open_wifi_driver/src/: hardware.c  hwinit.c  mac.c
main/: hardware.c  hardware.h  hwinit.c  main.c
